# Forge_LLM

./: .gitignore  BUILD_PLAN.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  forge_llm.md  pyproject.toml  pytest.ini  resume_here.md  ruff.toml
.github/workflows/: ci.yml
configs/: model_30m.yaml  train_kaggle_t4.yaml
docs/: 01_architecture.md  02_correctness_plan.md  03_training_plan.md  04_roadmap.md  05_risks.md  DECISIONS.md
docs/preflight/: phase_f_numbers.md
docs/research/: 01_landscape.md
docs/results/: kv_cache_bench.md
notebooks/: 01_load_and_generate.ipynb  02_kaggle_train.ipynb
scripts/: benchmark_kv_cache.py  eval_perplexity.py  export_to_hub.py  prepare_data.py  train_bpe.py
src/forge_llm/: __init__.py  attention.py  bench.py  block.py  cache.py  cli.py  config.py  data.py  eval.py  generation.py  hub.py  mlp.py  model.py  norm.py  rope.py  sampling.py  tokenizer.py  train.py
tests/: conftest.py  test_attention.py  test_block.py  test_cache.py  test_causal_mask.py  test_cli.py  test_data.py  test_eval.py  test_generation.py  test_hub.py  test_mlp.py  test_model.py  test_norm.py  test_resume.py  test_rope.py  test_sampling.py  test_tokenizer.py  test_train.py
